--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasmani Digital financial transfer and technology. </title>
+    <title>Pasmani Digital finance and money transfer technology. </title>
     <link rel="stylesheet" href="./assets/media/ico/fontawesome/5.12.0/css/all.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/custom.css">
