--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                     <li><a href="/index.html">App</a></li>
                     <li><a href="/index.html">Get in toch</a></li>
                 </ul>
+                <div class="bars">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
         </header>
         <div class="content">
             <div class="text">
@@ -64,7 +69,7 @@
         <h2 class="intro-tag">Get Started</h2>
         <div class="flexed">
           <div class="intro-text">
-              <p class="how-to">Pasmani App takes your money with you !</p>
+              <p class="how-to">Take your money with you !</p>
               <p class="desc">Pasmni app is our recomended way of accessing our digital money transfer services. The app allows you to access all our services from one place all on your screen</p>
               <p class="app-adv">From the app you can:</p>
               <p class="steps"><span class="num">1.</span> Check for account balance, send and widthraw cash.</p>
