--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <header>
             <a href="index.html" class="logo"><img class="logo-img" src="./assets/media/img/logo-sm.png"></a>
                 <ul class="nav-links" type="none">
+                    <a href="javascript void(0)"><svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                      </svg></a>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/index.html">Get Started</a></li>
                     <li><a href="/index.html">App</a></li>
