--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <a href="index.html" class="logo"><img class="logo-img" src="./assets/media/img/logo-sm.png"></a>
                 <ul class="nav-links" type="none">
-                    <a href="javascript void(0)"><svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <a href="javascript void(0)" id="close" class="close"><svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                       </svg></a>
                     <li><a href="/index.html">Home</a></li>
@@ -31,6 +31,7 @@
                     <div class="bar"></div>
                 </div>
         </header>
+        <img src="./assets/media/img/gial.png" class="girl">
         <div class="content">
             <div class="text">
                 <h2><span class="">Pas</span><span class="">mani</span></h2>
@@ -45,7 +46,6 @@
                 <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
             </svg>
         </div>
-        <img src="./assets/media/img/gial.png" class="girl">
         <div class="social-media">
             <h2 class="social-tag">We are social</h2>
             <ul class="socia-media-handles" type="none">
