resize social tag

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="bar"></div>
                 </div>
         </header>
-        <img src="./assets/media/img/gial.png" class="girl">
+        <img src="./assets/media/img/girls.png" class="girl">
         <div class="content">
             <div class="text">
                 <h2><span class="">Pas</span><span class="">mani</span></h2>
