--- a/index.html
+++ b/index.html
@@ -9,27 +9,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/custom.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <section class="page-1">
         <header>
-            <a href="index.html" class="logo"><img class="logo-img" src="./assets/media/img/logo-sm.png"></a>
-                <ul class="nav-links" type="none">
-                    <a href="javascript void(0)" id="close" class="close"><svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                      </svg></a>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html">Get Started</a></li>
-                    <li><a href="/index.html">App</a></li>
-                    <li><a href="/index.html">Get in toch</a></li>
-                </ul>
-                <div class="bars">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                </div>
+          <nav class="navbar navbar-expand-lg navbar-dark w-100">
+            <a class="navbar-brand" href="#"><img class="logo-img" src="./assets/media/img/logo-sm.png" height="54"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="/index.html">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/index.html">Get Started</a>
+                </li>
+                <li class="nav-item">
+                <li class="nav-item">
+                  <a class="nav-link" href="/index.html">App</a>
+                </li>
+                  <a class="nav-link" href="/index.html">Developer</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/index.html">Get in toch</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </header>
         <img src="./assets/media/img/girls.png" class="girl">
         <div class="content">
@@ -38,7 +49,7 @@
                 <h3>Digital Finacial Freedom</h3>
                 <p>What would take days on long queues and paperworks is now simplified into seconds on few taps from your smartphone or tablet.</p>
                 <p>Pasmani technology is the new convenient global solution to send and receive money from anywhere, any timezone  in the world in real time at one's own conveniency and at no extra cost of service. Simply download pasmani app from google playstore to start enjoying our exclusive services! </p>
-                <a href="./index.html">Download App</a>
+                <a class ="btn btn-default" href="./index.html">Download App</a>
             </div>
         </div>
         <div class="custom-shape-divider-bottom-1601042332">
